# hj

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.ctx/: HANDOFF.hj.hj.yaml  conformance.md
.github/workflows/: ci.yml  release.yml
crates/hj-cli/: Cargo.toml  README.md
crates/hj-cli/src/: alias.rs  cli.rs  handoff.rs  handup.rs  install.rs  lib.rs  main.rs
crates/hj-core/: Cargo.toml  README.md
crates/hj-core/src/: detect.rs  lib.rs
crates/hj-doob/: Cargo.toml  README.md
crates/hj-doob/src/: lib.rs
crates/hj-git/: Cargo.toml  README.md
crates/hj-git/src/: lib.rs
crates/hj-render/: Cargo.toml  README.md
crates/hj-render/src/: lib.rs
crates/hj-sqlite/: Cargo.toml  README.md
crates/hj-sqlite/src/: lib.rs
examples/: README.md  common.sh  visual-demo.sh
examples/commands/: 01-detect.sh  02-refresh.sh  03-handoff.sh  04-handon.sh  05-handover.sh  06-handoff-db.sh  07-handup.sh  08-install.sh  09-update.sh  10-update-all.sh  11-reconcile.sh  12-audit.sh  13-close.sh
examples/visual/: README.md  index.html
hj-cli/: Cargo.toml
hj-cli/src/: main.rs
hj-core/src/: lib.rs
hj-git/src/: lib.rs
hj-render/src/: lib.rs
hj-sqlite/: Cargo.toml
hj-sqlite/src/: lib.rs
tests/conformance/: Cargo.toml
tests/conformance/src/: cli.rs  core.rs  doob.rs  git.rs  lib.rs  render.rs  sqlite.rs
