[workspace]
members = [
    "crates/hj-cli",
    "crates/hj-core",
    "crates/hj-doob",
    "crates/hj-git",
    "crates/hj-render",
    "crates/hj-sqlite",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
toml = "0.9.8"
walkdir = "2.5.0"
