[package]
name = "hj-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hj"
path = "src/main.rs"

[[bin]]
name = "handoff-detect"
path = "src/bin/handoff-detect.rs"

[[bin]]
name = "handoff-db"
path = "src/bin/handoff-db.rs"

[[bin]]
name = "handup"
path = "src/bin/handup.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
hj-core = { path = "../hj-core" }
hj-doob = { path = "../hj-doob" }
hj-git = { path = "../hj-git" }
hj-render = { path = "../hj-render" }
hj-sqlite = { path = "../hj-sqlite" }
serde_json.workspace = true
serde_yaml.workspace = true
