[package]
name = "hj-cli"
version.workspace = true
edition.workspace = true
description = "CLI for handoff state, reconciliation, and handup surveys"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/hj-cli"
keywords = ["cli", "handoff", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hj"
path = "src/main.rs"

[[bin]]
name = "handoff-detect"
path = "src/bin/handoff-detect.rs"

[[bin]]
name = "handoff"
path = "src/bin/handoff.rs"

[[bin]]
name = "handon"
path = "src/bin/handon.rs"

[[bin]]
name = "handover"
path = "src/bin/handover.rs"

[[bin]]
name = "handoff-db"
path = "src/bin/handoff-db.rs"

[[bin]]
name = "handup"
path = "src/bin/handup.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
hj-core = { version = "0.1.2", path = "../hj-core" }
hj-doob = { version = "0.1.2", path = "../hj-doob" }
hj-git = { version = "0.1.2", path = "../hj-git" }
hj-render = { version = "0.1.2", path = "../hj-render" }
hj-sqlite = { version = "0.1.2", path = "../hj-sqlite" }
serde_json.workspace = true
serde_yaml.workspace = true
