[package]
name = "hj-doob"
version.workspace = true
edition.workspace = true
description = "Doob integration helpers for hj handoff workflows"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/hj-doob"
keywords = ["handoff", "doob", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
hj-core = { version = "0.1.1", path = "../hj-core" }
serde.workspace = true
serde_json.workspace = true
