[package]
name = "hj-git"
version.workspace = true
edition.workspace = true
description = "Git and repo discovery utilities for hj handoff workflows"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/hj-git"
keywords = ["git", "handoff", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
hj-core = { version = "0.1.2", path = "../hj-core" }
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
